# vibe_comgrow_z1_linux

./: .gitignore  Cargo.toml  README.md  build.sh  fix_ui_text.py  increment_and_publishrelease.sh  index.html  install-dependent-packages.sh  llm.md  refactor.py  rustfmt.toml  saved_states.json  setup_debian_env.sh  todo.md  version.txt
.github/workflows/: release.yml
src/: cli_and_helpers.rs  comm.rs  error.rs  gcode.rs  icons.rs  main.rs  preview.rs  state.rs  styles.rs  svg_helper.rs  theme.rs  ui.rs  ui_components.rs  ui_image.rs  ui_manual.rs  ui_svg.rs  ui_test.rs  ui_text.rs  virtual_device.rs
