[package]
name = "comgrow-z1-app"
version = "0.1.0"
edition = "2024"

[dependencies]
clay-layout = { version = "0.4.0", features = ["raylib-renderer"] }
raylib = "5.5"
tokio = { version = "1.50.0", features = ["full"] }
arboard = "3.4.1"
serialport = "4.6.1"
ctrlc = "3.4"
usvg = "0.47"
lyon_geom = "1.0"
