[package]
name = "trogdor"
version = "0.1.0"
edition = "2024"

[dependencies]
clay-layout = { version = "0.4.0", features = ["raylib-renderer"] }
raylib = "5.5"
tokio = { version = "1.50.0", features = ["full"] }
arboard = "3.4.1"
serialport = "4.6.1"
ctrlc = "3.4"
usvg = "0.47"
lyon_geom = "1.0"
pico-args = "0.5"
rfd = "0.15"
image = "0.25"
font-kit = "0.14"
pathfinder_geometry = "0.5"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
chrono = "0.4.44"
